--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/benrussell/Gizmo-Docs">View on GitHub</a>
 
-          <h1 id="project_title">Gizmo-docs</h1>
-          <h2 id="project_tagline">Gizmo documentation generator.</h2>
-
+          <h1 id="project_title">Gizmo64 Docs</h1>
+          <h2 id="project_tagline">Documentation for Gizmo64.plugin</h2>
+            <!--
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/benrussell/Gizmo-Docs/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/benrussell/Gizmo-Docs/tarball/master">Download this project as a tar.gz file</a>
             </section>
+            -->
         </header>
     </div>
 
@@ -32,26 +33,40 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-gizom64" class="anchor" href="#welcome-to-gizmo64"><span class="octicon octicon-link"></span></a>Welcome to Gizom64.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Gizmo64 is a plugin for the X-Plane flight simulator that lets you program in Lua Script.</p>
+<p>Featuring low level access to access to the simulator and a feature rich API out of the box Gizmo64 is the easiest way to create feature rich content for X-Plane.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<!--
+<pre><code>eg code
 </code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+-->
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+          <h3>
+              <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started..</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+              <p>Install videos:</p>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+              <p>Hello World:</p>
+                <p>
+                    ACF/scripts/init.lua<br>
+<pre><code>function OnDraw_Windows()
+    gfx.setColor(color.red)
+    gfx.drawString( "Hello World!", 512, 384 )
+end</code></pre>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+                </p>
+
+          <h3>
+            <a name="api-reference" class="anchor" href="#api-reference"><span class="octicon octicon-link"></span></a>API Reference</h3>
+
+            <p>Gizmo64 provides an extensive API, the following should help you navigate it with ease:</p>
+          <a href='Gizmo_API.htm' target='_blank'>Gizmo64 API</a>
+
+
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
