--- a/Gizmo_API.htm
+++ b/Gizmo_API.htm
@@ -1,54 +1,9 @@
 <html>
     <head>
         <title>Gizmo API</title>
-        <!-- link rel="stylesheet" type="text/css" href="style.css" / -->
+        <link rel="stylesheet" type="text/css" href="stylesheets/Gizmo_API.css"/>
     </head>
 
-
-
-
-
-    <style>
-        .api_mod_block_header{
-            cursor: pointer;
-        }
-
-        .branch {
-            z-index:-10;
-            _background-color: #efffff;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        .leaf {
-            padding-left: 10px;
-            border-bottom: 1px solid lightgray;
-            cursor: pointer;
-            z-index: 10;
-        }
-
-        .docblock {
-            padding-left: 20px;
-            /*border-bottom: 1px solid lightgray;*/
-        }
-
-        .docblock_header {
-            font-weight: bold;
-            font-size: 12pt;
-            padding: 20px;
-        }
-        .docblock_body {
-            font-size: 10pt;
-            padding-left:50px;
-        }
-
-
-        body{
-            font-family: Verdana;
-        }
-
-
-    </style>
 
 
     <script src='Gizmo_API.js'></script>
@@ -72,7 +27,7 @@
 
 <div style='width:100%; height:100%; background-color:#888888; border: 0px solid blue; left:320px; top:0px; position:absolute;'>
 	<div id='div_docBlock' class='docblock' style='display:;'>
-		<div id='div_docBlock_Header' class='docblock_header'>Gizmo API Documentation v14.04.04</div>
+		<div id='div_docBlock_Header' class='docblock_header'>Gizmo64 API Reference v14.04.04</div>
 		<div id='div_docBlock_Content' class='docblock_body'>
 			<img src='Gizmo_Logo_Color_120px.png' width='120' height='58' alt='Gizmo64 Logo' align='absmiddle'/>
             <img src='lua-128x128.png' width='128' height='128' alt='Lua Logo' align='absmiddle'/>
