--- a/Gizmo_API.htm
+++ b/Gizmo_API.htm
@@ -68,10 +68,13 @@
         </div>
 
 
-<!-- Import the JSON data we need to build the documentation GUI from. -->
-<script type="text/javascript" src="content/autogen/api_dox.json"></script>
-<script type="text/javascript" src="content/event_dox.json"></script>
+        <!-- Import the JSON data we need to build the documentation GUI from. -->
+        <script type="text/javascript" src="content/autogen/api_dox.json"></script>
+        <script type="text/javascript" src="content/autogen/event_dox.json"></script>
 
 
-</body>
+        <script type="text/javascript" src="content/autogen/api_dox_firmware.json" onload='mergeFwData();'></script>
+
+
+    </body>
 </html>
