Massive styling update for API Ref GUI.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Gizmo-docs</title>
+    <title>Gizmo64 Docs</title>
   </head>
 
   <body>
@@ -33,10 +33,10 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-gizom64" class="anchor" href="#welcome-to-gizmo64"><span class="octicon octicon-link"></span></a>Welcome to Gizom64.</h3>
+<a name="welcome-to-gizom64" class="anchor" href="#welcome-to-gizmo64"><span class="octicon octicon-link"></span></a>Welcome to the home of Gizmo64.</h3>
 
-<p>Gizmo64 is a plugin for the X-Plane flight simulator that lets you program in Lua Script.</p>
-<p>Featuring low level access to access to the simulator and a feature rich API out of the box Gizmo64 is the easiest way to create feature rich content for X-Plane.</p>
+<p>Gizmo64 is a plugin for the X-Plane flight simulator that lets you program in Lua Script.</p><br>
+<p>With low level access to access to the simulator and a feature rich API out of the box Gizmo64 is the easiest way to create feature rich content for X-Plane.</p>
 
 <!--
 <pre><code>eg code
@@ -46,7 +46,18 @@
 -->
 
           <h3>
-              <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started..</h3>
+              <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started: Pilots..</h3>
+
+          <p>Installation:</p>
+          <p> [ video ] </p>
+
+          <p>Quick Tour:</p>
+          <p> [ video ] </p>
+
+
+
+          <h3>
+              <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started: Developers..</h3>
 
               <p>Install videos:</p>
 
@@ -60,11 +71,15 @@ end</code></pre>
 
                 </p>
 
+
+
+
+
           <h3>
             <a name="api-reference" class="anchor" href="#api-reference"><span class="octicon octicon-link"></span></a>API Reference</h3>
 
-            <p>Gizmo64 provides an extensive API, the following should help you navigate it with ease:</p>
-          <a href='Gizmo_API.htm' target='_blank'>Gizmo64 API</a>
+            <p>
+          <a href='Gizmo_API.htm' target='_blank'>Gizmo64 API Reference Manual</a></p>
 
 
 
