Imports highlight JS.

--- a/Gizmo_API.htm
+++ b/Gizmo_API.htm
@@ -8,6 +8,14 @@
 
     <script src='Gizmo_API.js'></script>
 
+
+    <!-- source code highlighting -->
+    <link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/default.min.css">
+    <script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
+
+    <script>hljs.initHighlightingOnLoad();</script>
+
+
     <body style="overflow: hidden;" onload='OnLoad();' onresize='OnResize();'>
 
 
