--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Gizmo64 Docs</title>
+    <title>Gizmo64.plugin</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/benrussell/Gizmo-Docs">View on GitHub</a>
 
-          <h1 id="project_title">Gizmo64 Docs</h1>
-          <h2 id="project_tagline">Documentation for Gizmo64.plugin</h2>
+          <h1 id="project_title">Gizmo64.plugin</h1>
+          <h2 id="project_tagline">Home of Gizmo64.plugin for the X-Plane flight simulator.</h2>
             <!--
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/benrussell/Gizmo-Docs/zipball/master">Download this project as a .zip file</a>
@@ -45,6 +45,8 @@
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 -->
 
+          <br>
+          <br>
           <h3>
               <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started: Pilots..</h3>
 
@@ -56,6 +58,8 @@
 
 
 
+          <br>
+          <br>
           <h3>
               <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Getting Started: Developers..</h3>
 
@@ -75,23 +79,30 @@ end</code></pre>
 
 
 
+          <br>
+          <br>
           <h3>
             <a name="api-reference" class="anchor" href="#api-reference"><span class="octicon octicon-link"></span></a>API Reference</h3>
 
             <p>
-          <a href='Gizmo_API.htm' target='_blank'>Gizmo64 API Reference Manual</a></p>
+          <a href='Gizmo64_API.htm' target='_blank'>Gizmo64 API Reference Manual</a></p>
 
 
 
-<h3>
+          <br>
+          <br>
+          <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
-<h3>
+
+          <br>
+          <br>
+          <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Having trouble with Gizmo64? Contact <a href="mailto:support@x-plugins.com">support@x-plugins.com</a> and we’ll help you sort it out.</p>
       </section>
     </div>
 
