Typo tweak, adds syntax highlighter.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Gizmo64.plugin</title>
+      <!-- syntax highlighter -->
+      <script src='rainbow-master/js/rainbow.js'></script>
+      <script src='rainbow-master/js/language/lua.js'></script>
+
+
+      <title>Gizmo64.plugin</title>
   </head>
 
   <body>
@@ -36,7 +41,7 @@
 <a name="welcome-to-gizom64" class="anchor" href="#welcome-to-gizmo64"><span class="octicon octicon-link"></span></a>Welcome to the home of Gizmo64.</h3>
 
 <p>Gizmo64 is a plugin for the X-Plane flight simulator that lets you program in Lua Script.</p><br>
-<p>With low level access to access to the simulator and a feature rich API out of the box Gizmo64 is the easiest way to create feature rich content for X-Plane.</p>
+<p>With low level access to the simulator and a feature rich API out of the box Gizmo64 is the easiest way to create feature rich content for X-Plane.</p>
 
 <!--
 <pre><code>eg code
@@ -96,7 +101,7 @@ end</code></pre>
             <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Gratuitous wall of Logos:</h3>
 
             <p>
-                
+
             </p>
 
 
