CSS tweaks for syntax highlighter.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <!-- syntax highlighter -->
       <script src='rainbow-master/js/rainbow.js'></script>
       <script src='rainbow-master/js/language/lua.js'></script>
+      <link href="rainbow-master/themes/github.css" rel="stylesheet" type="text/css">
 
 
       <title>Gizmo64.plugin</title>
