--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer">
+    <div id="header_wrap" class="outer" style='height:170px'>
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/benrussell/Gizmo-Docs">View on GitHub</a>
 
@@ -39,7 +39,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-gizom64" class="anchor" href="#welcome-to-gizmo64"><span class="octicon octicon-link"></span></a>Welcome to the home of Gizmo64.</h3>
+<a name="welcome-to-gizom64" class="anchor" href="#welcome-to-gizmo64"><span class="octicon octicon-link"></span></a>Welcome.</h3>
 
 <p>Gizmo64 is a plugin for the X-Plane flight simulator that lets you program in Lua Script.</p><br>
 <p>With low level access to the simulator and a feature rich API out of the box Gizmo64 is the easiest way to create feature rich content for X-Plane.</p>
