Updates for page to display group logos.

--- a/Gizmo64_API.htm
+++ b/Gizmo64_API.htm
@@ -34,7 +34,8 @@
                 overflow: auto;
                 margin: 0 3px;
 
-                background: #f8f8f8;
+                background: white;
+                _background: #f8f8f8;
             }
         </style>
 
