Filename tweak for image resource. Linux server.

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </td>
             
             <td class='trophy'>
-                <img width='180' id='imgIXEG' src='images/JGX_logo.png'/>
+                <img width='180' id='imgIXEG' src='images/JGX_Logo.png'/>
             </td>
         </tr>
 
