Adds Download link for plugin, tweaks layout.

--- a/index.html
+++ b/index.html
@@ -52,23 +52,17 @@
 <br>
 
 
-<!--
-<pre><code>eg code
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
--->
-
-<br>
-<br>
-
 <h3>
     <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Download..
 </h3>
 
+<p>Current Version:</p><br/>
+<p><a href='downloads/Gizmo64.plugin-14.01.16.0253.zip'>Gizmo64.plugin-14.01.16.0253.zip</a> (5.8mb) Mac+Windows 64bit</p><br/>
+<br>
+<p>Linux support is not available at this time.</p><br>
+<br>
 
-<br>
-<br>
+
 
 <h3>
     <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Install..
@@ -87,10 +81,9 @@
 <p>Quick Tour:</p><br/>
 
 <p> [ video ] </p><br/>
+<br>
 
 
-<br>
-<br>
 
 <h3>
     <a name="api-reference" class="anchor" href="#api-reference"><span class="octicon octicon-link"></span></a>Hello
@@ -103,13 +96,10 @@
 <pre><code data-language='lua'>function OnDraw_Windows()
     gfx.setColor(color.red)
     gfx.drawString( "Hello World!", 512, 384 )
-    end</code></pre>
-
+end</code></pre>
 </p>
-
-
 <br>
-<br>
+
 
 <h3>
     <a name="api-reference" class="anchor" href="#api-reference"><span class="octicon octicon-link"></span></a>Documentation
@@ -117,11 +107,11 @@
 
 <p>
     <a href='Gizmo64_API.htm' target='_blank'>Gizmo64 API Reference Manual</a>
-</p>
+</p><br>
+<br>
 
 
-<br>
-<br>
+
 
 <h3>
     <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span
@@ -210,13 +200,13 @@
 
 
 </div>
-</p>
-
+</p><br>
 <br>
 
 
-<h3>Create award winning products with Gizmo64.</h3>
 
+
+<h3>Create award winning products with Gizmo64.</h3>
 <p>
 
 <div style="background-color: white; foo:#f8f8f8; width:562px; border-radius:3px; border: solid 1px #ccc; padding: 50px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center; ">
@@ -245,11 +235,12 @@
     </table>
 
 </div>
-</p>
+</p><br>
+<br>
 
 
-<br>
-<br>
+
+
 
 <h3>
     <a name="support-or-contact" class="anchor" href="#support-or-contact"><span
@@ -259,6 +250,10 @@
     sort it out.</p>
 </section>
 </div>
+
+
+
+
 
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
