--- a/index.html
+++ b/index.html
@@ -53,7 +53,37 @@
 
 
 
+<h3>Create award winning products with Gizmo64.</h3>
+<p>
 
+<div style="background-color: white; foo:#f8f8f8; width:562px; border-radius:3px; border: solid 1px #ccc; padding: 50px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center; ">
+
+    <table width="100%" cellpadding='0' cellspacing='0' style="border: 0px solid black;">
+        <tr>
+            <td class='trophy' style='vertical-align: top;'>
+                <img src='images/pc_pilot_platinum.jpg'><br>
+                <br>
+
+            </td>
+            <td class='trophy' style='text-align: left; vertical-align: top;'>
+
+                Leading Edge Simulation Saab 340A
+                wins Platinum award.<br>
+                <br>
+                <a href='http://www.pcpilot.net/issue_onlineContent.asp?IssueID=5862' target='_blank'>
+                    PC Pilot May/June 2014 Edition<br>
+                    <br>
+                    <img src='http://www.pcpilot.net/central/images/covers/large/5862.jpg' height='128'>
+                </a>
+
+
+            </td>
+        </tr>
+    </table>
+
+</div>
+</p><br>
+<br>
 
 
 
@@ -142,41 +172,6 @@
 
     </table>
 
-
-</div>
-</p><br>
-<br>
-
-
-
-
-<h3>Create award winning products with Gizmo64.</h3>
-<p>
-
-<div style="background-color: white; foo:#f8f8f8; width:562px; border-radius:3px; border: solid 1px #ccc; padding: 50px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center; ">
-
-    <table width="100%" cellpadding='0' cellspacing='0' style="border: 0px solid black;">
-        <tr>
-            <td class='trophy' style='vertical-align: top;'>
-                <img src='images/pc_pilot_platinum.jpg'><br>
-                <br>
-
-            </td>
-            <td class='trophy' style='text-align: left; vertical-align: top;'>
-
-                Leading Edge Simulation Saab 340A
-                wins Platinum award.<br>
-                <br>
-                <a href='http://www.pcpilot.net/issue_onlineContent.asp?IssueID=5862' target='_blank'>
-                    PC Pilot May/June 2014 Edition<br>
-                    <br>
-                    <img src='http://www.pcpilot.net/central/images/covers/large/5862.jpg' height='128'>
-                </a>
-
-
-            </td>
-        </tr>
-    </table>
 
 </div>
 </p><br>
@@ -274,9 +269,15 @@ end</code></pre>
 <!-- FOOTER  -->
 <div id="footer_wrap" class="outer">
     <footer class="inner">
-        <p class="copyright">Gizmo-docs maintained by <a href="https://github.com/benrussell">benrussell</a></p>
+        <p class="copyright">Gizmo64-Docs maintained by <a href="https://github.com/benrussell">benrussell</a></p>
 
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p><br>
+        <br>
+
+        <div align='center'>
+        <p class="copyright">This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p><br>
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />
+        </div>
 
     </footer>
 </div>
