Adds support for branch info lookups.

--- a/Gizmo64_API.htm
+++ b/Gizmo64_API.htm
@@ -8,6 +8,9 @@
 
         <script src='Gizmo_API.js'></script>
 
+        <script src='content/api/branch_info.js'></script>
+
+
         <script src='rainbow-master/js/rainbow.js'></script>
         <script src='rainbow-master/js/language/lua.js'></script>
         <link href="rainbow-master/themes/github.css" rel="stylesheet" type="text/css">
