Updates to index page.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="rainbow-master/themes/github.css" rel="stylesheet" type="text/css">
 
 
-    <title>Gizmo64.plugin</title>
+    <title>Gizmo64</title>
 </head>
 
 <body>
@@ -24,9 +24,9 @@
     <header class="inner">
         <a id="forkme_banner" href="https://github.com/benrussell/Gizmo-Docs">View on GitHub</a>
 
-        <h1 id="project_title">Gizmo64.plugin</h1>
+        <h1 id="project_title">Gizmo64</h1>
 
-        <h2 id="project_tagline">Home of Gizmo64.plugin for the X-Plane flight simulator.</h2>
+        <h2 id="project_tagline">A plugin for the <a href='http://x-plane.com' target='_blank'>X-Plane</a> flight simulator.</h2>
         <!--
         <section id="downloads">
           <a class="zip_download_link" href="https://github.com/benrussell/Gizmo-Docs/zipball/master">Download this project as a .zip file</a>
@@ -45,7 +45,7 @@
 
 <p>Gizmo64 is a plugin for the X-Plane flight simulator that lets you program in Lua Script.</p><br>
 <br>
-<p>With low level access to the simulator and a feature rich API out of the box Gizmo64 is the easiest way to create
+<p>With low level access to the simulator and a <a href='Gizmo64_API.htm' target='_blank'>feature rich API</a> out of the box Gizmo64 is the easiest way to create
     feature rich content for X-Plane.</p><br>
 <br>
 <p>Cross Platform Support for 64bit Windows and OSX. One API, Multiple Targets.</p><br>
@@ -114,19 +114,19 @@
         <tr>
             <td class='trophy'>
                 <a href='https://www.facebook.com/OfficialLeadingEdgeSimulations' target='_blank'>
-                    <img width='180' id='imgIXEG' src='images/LES Logo.png'/>
+                    <img width='180' id='imgIXEG' alt='Leading Edge Simulations' src='images/LES-Logo.png'/>
                 </a>
             </td>
 
             <td class='trophy'>
-                <img width='180' id='imgIXEG' src='images/JGX_Logo.png'/>
+                <img width='180' id='imgJGXDesigns' alt='JGX Designs' src='images/JGX_Logo.png'/>
             </td>
         </tr>
 
         <tr>
             <td class='trophy'>
                 <!-- IA -->
-                <img width='128' id='imgSecret' alt='IA' src='images/secret.png'/>
+                <img width='180' id='imgS' alt='S' src='images/secret.png'/>
             </td>
 
             <td class='trophy'>
@@ -141,7 +141,7 @@
         <tr>
             <td class='trophy' colspan='3' width='100%' style='text-align: center; vertical-align: bottom;'>
                 <a href='http://syseng.lboro.ac.uk' target='_blank'>
-                    <img width='400' id='imgSecret' alt='...' src='images/RSSE_lulogo.png'/>
+                    <img width='400' id='imgSecret' alt='Research School of Systems Engineering' src='images/RSSE_lulogo.png'/>
 
                 </a>
             </td>
@@ -166,7 +166,7 @@
             </td>
 
             <td class='trophy'>
-                <span img width='180' id='imgSecret' alt='...' src='images/secret.png'/>
+                <img width='128' id='imgSecret' alt='IA' src='images/secret.png'/>
             </td>
         </tr>
 
