Cleans up logo section.

--- a/index.html
+++ b/index.html
@@ -125,14 +125,13 @@
 
         <tr>
             <td class='trophy'>
-                <!-- IA -->
-                <img width='180' id='imgS' alt='S' src='images/secret.png'/>
-            </td>
-
-            <td class='trophy'>
                 <a href='http://x-scenery.com' target='_blank'>
                     <img width='180' id='imgXScenery' alt='X-Scenery' src='images/X-Scenery%20Logo.png'/>
                 </a>
+            </td>
+            <td class='trophy'>
+                <!-- IA -->
+                <span img width='180' id='imgS' alt='S' src='images/secret.png'/>
             </td>
         </tr>
 
@@ -150,6 +149,7 @@
 
         <!-- EA, JA, CO -->
 
+        <!--
         <tr>
             <td class='trophy'>
                 <img width='180' id='imgSecret' alt='EA' src='images/secret.png'/>
@@ -169,6 +169,7 @@
                 <img width='128' id='imgSecret' alt='IA' src='images/secret.png'/>
             </td>
         </tr>
+        -->
 
     </table>
 
