--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <p>Gizmo64 is a plugin for the X-Plane flight simulator that lets you program in Lua Script.</p><br>
 <br>
-<p>With low level access to the simulator and a <a href='Gizmo64_API.htm' target='_blank'>feature rich API</a> out of the box Gizmo64 is the easiest way to create
+<p>With <a href='Gizmo64_API.htm#events' target='_blank'>low level access</a> to the simulator and a <a href='Gizmo64_API.htm' target='_blank'>feature rich API</a> out of the box Gizmo64 is the easiest way to create
     feature rich content for X-Plane.</p><br>
 <br>
 <p>Cross Platform Support for 64bit Windows and OSX. One API, Multiple Targets.</p><br>
