Adds screenshots for API GUI and Plugin Flowchart.

--- a/index.html
+++ b/index.html
@@ -242,8 +242,24 @@ end</code></pre>
 </h3>
 
 <p>
-    <a href='Gizmo64_API.htm' target='_blank'>Gizmo64 API Reference Manual</a>
+    <a href='Gizmo64_API.htm' target='_blank'>Gizmo64 API Reference Manual</a><br>
+    <a href='Gizmo64_API.htm' target='_blank'>
+        <img src='images/screenshots/gizmo64_api_reference_preview.jpg' width="579" height="311">
+    </a>
 </p><br>
+
+<br>
+
+<p>
+    <a href='https://docs.google.com/drawings/d/1cyxgxqB9o-txjWcfjVxqEjSrBB1M56XdbqWaWP3QhH4/edit?usp=sharing' target='_blank'>Gizmo64 "Plugin Internals" Flow Chart</a><br>
+
+    <a href='https://docs.google.com/drawings/d/1cyxgxqB9o-txjWcfjVxqEjSrBB1M56XdbqWaWP3QhH4/edit?usp=sharing' target='_blank'>
+        <img src='images/screenshots/gizmo64_flow_chart_preview.jpg' width="496" height="403">
+    </a>
+</p><br>
+
+
+
 <br>
 
 
