Tweaks title tag.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="rainbow-master/themes/github.css" rel="stylesheet" type="text/css">
 
 
-    <title>Gizmo64</title>
+    <title>Gizmo64 - A plugin for the X-Plane flight simulator.</title>
 </head>
 
 <body>
