Adds Icon Aircraft logo.

--- a/index.html
+++ b/index.html
@@ -125,14 +125,17 @@
 
         <tr>
             <td class='trophy'>
+                <a href='http://iconaircraft.com' target='_blank'>
+                    <img width='128' id='imgIconA5' alt='Icon Aircraft' src='images/icon_logo.png'/>
+                </a>
+            </td>
+
+            <td class='trophy'>
                 <a href='http://x-scenery.com' target='_blank'>
                     <img width='180' id='imgXScenery' alt='X-Scenery' src='images/X-Scenery%20Logo.png'/>
                 </a>
             </td>
-            <td class='trophy'>
-                <!-- IA -->
-                <span img width='180' id='imgS' alt='S' src='images/secret.png'/>
-            </td>
+
         </tr>
 
 
