--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- HEADER -->
 <div id="header_wrap" class="outer" style='height:170px'>
     <header class="inner">
-        <a id="forkme_banner" href="https://github.com/benrussell/Gizmo-Docs">View on GitHub</a>
+        <a id="forkme_banner" href="https://github.com/benrussell/Gizmo-Docs">Gizmo64.com on GitHub</a>
 
         <h1 id="project_title">Gizmo64</h1>
 
