--- a/Gizmo64_API.htm
+++ b/Gizmo64_API.htm
@@ -52,7 +52,7 @@
 
             <div id='searchBox' class='outer'  style='text-align:center;  width:310px; padding: 0px; overflow: hidden; height:72px; left:0px; top:0px; padding: 5px; position:absolute; background-color:#777777; '>
 
-                <form method="get" action="/search" id="search" style='b_order: 1px solid red;'>
+                <form method="get" action="/search" id="search" style='display: hidden; b_order: 1px solid red;'>
                     <input name="q" type="text" size="40" placeholder="Search..." />
                 </form>
 
@@ -75,8 +75,6 @@
 
                 -->
             </div>
-
-
 
 
             <div id="navTree_events" style='display:none; width:320px; padding: 5px; overflow: auto; height:100px; border: 0px solid black; left:0px; top:64px; position:absolute; background-color:#777c77;'>
@@ -119,7 +117,7 @@
 
                 </div>
             </div><br>
-
+            <br>
             <div id='div_extraContent' class='docblock'>
                 additional content from server...
             </div>
