--- a/index.html
+++ b/index.html
@@ -53,39 +53,6 @@
 
 
 
-<h3>Create award winning products with Gizmo64.</h3>
-<p>
-
-<div style="background-color: white; foo:#f8f8f8; width:562px; border-radius:3px; border: solid 1px #ccc; padding: 50px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center; ">
-
-    <table width="100%" cellpadding='0' cellspacing='0' style="border: 0px solid black;">
-        <tr>
-            <td class='trophy' style='vertical-align: top;'>
-                <img src='images/pc_pilot_platinum.jpg'><br>
-                <br>
-
-            </td>
-            <td class='trophy' style='text-align: left; vertical-align: top;'>
-
-                Leading Edge Simulation Saab 340A
-                wins Platinum award.<br>
-                <br>
-                <a href='http://www.pcpilot.net/issue_onlineContent.asp?IssueID=5862' target='_blank'>
-                    PC Pilot May/June 2014 Edition<br>
-                    <br>
-                    <img src='http://www.pcpilot.net/central/images/covers/large/5862.jpg' height='128'>
-                </a>
-
-
-            </td>
-        </tr>
-    </table>
-
-</div>
-</p><br>
-<br>
-
-
 
 <h3>
     <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span
@@ -94,6 +61,19 @@
 <p>
 
 <div style="background-color: white; foo:#f8f8f8; width:562px; border-radius:3px; border: solid 1px #ccc; padding: 50px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center; ">
+
+
+
+	<!-- Airbus -->
+	<tr>
+		<td class='trophy' colspan='3' width='100%' style='text-align: center; vertical-align: bottom;'>
+			<a href='http://www.airbus-group.com' target='_blank'>
+				<img width='400' id='imgAirbus' alt='Airbus' src='images/AIRBUS_Group_3D_Blue_RGB.PNG'/>
+
+			</a>
+		</td>
+	</tr>
+
 
 
     <!-- old school. -->
@@ -150,22 +130,6 @@
         </tr>
 
 
-        <!-- EA, JA, CO -->
-
-        <!--
-        <tr>
-            <td class='trophy'>
-                <img width='180' id='imgSecret' alt='EA' src='images/secret.png'/>
-            </td>
-
-            <td class='trophy'>
-                <img width='180' id='imgSecret' alt='JA' src='images/secret.png'/>
-            </td>
-        </tr>
-
-
-        -->
-
     </table>
 
 
@@ -175,6 +139,42 @@
 
 
 
+
+
+
+
+
+<h3>Create award winning products with Gizmo64.</h3>
+<p>
+
+<div style="background-color: white; foo:#f8f8f8; width:562px; border-radius:3px; border: solid 1px #ccc; padding: 50px; box-shadow: 0 0 10px rgba(0,0,0,0.1); text-align: center; ">
+
+    <table width="100%" cellpadding='0' cellspacing='0' style="border: 0px solid black;">
+        <tr>
+            <td class='trophy' style='vertical-align: top;'>
+                <img src='images/pc_pilot_platinum.jpg'><br>
+                <br>
+
+            </td>
+            <td class='trophy' style='text-align: left; vertical-align: top;'>
+
+                Leading Edge Simulation Saab 340A
+                wins Platinum award.<br>
+                <br>
+                <a href='http://www.pcpilot.net/issue_onlineContent.asp?IssueID=5862' target='_blank'>
+                    PC Pilot May/June 2014 Edition<br>
+                    <br>
+                    <img src='http://www.pcpilot.net/central/images/covers/large/5862.jpg' height='128'>
+                </a>
+
+
+            </td>
+        </tr>
+    </table>
+
+</div>
+</p><br>
+<br>
 
 
 
