--- a/index.html
+++ b/index.html
@@ -199,19 +199,7 @@
     <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Install..
 </h3>
 
-<p>Windows:</p><br/>
-
-<p> [ video ] </p><br/>
-<br/>
-
-<p>OS X:</p><br/>
-
-<p> [ video ] </p><br/>
-<br/>
-
-<p>Quick Tour:</p><br/>
-
-<p> [ video ] </p><br/>
+<p> Download and extract Gizmo. Move Gizmo64.plugin to X-Plane/Resources/plugins/ </p><br/>
 <br>
 
 
