--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <a href='http://www.pcpilot.net/issue_onlineContent.asp?IssueID=5862' target='_blank'>
                     PC Pilot May/June 2014 Edition<br>
                     <br>
-                    <img src='http://www.pcpilot.net/central/images/covers/large/5862.jpg' height='128'>
+                    <img src='http://cd.pcpilot.net/central/images/covers/large/5862.jpg' height='128'>
                 </a>
 
 
@@ -187,7 +187,11 @@
     <a name="getting-started" class="anchor" href="#getting-started"><span class="octicon octicon-link"></span></a>Download..
 </h3>
 
+
 <p>Current Version:</p><br/>
+To be uploaded.	
+	
+<p>Legacy Versions:</p><br/>
 <p><a href='downloads/Gizmo64.plugin-14.01.16.0253.zip'>Gizmo64.plugin-14.01.16.0253.zip</a> (5.8mb) Mac+Windows 64bit</p><br/>
 <br>
 <p>Linux support is not available at this time.</p><br>
