--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 
 <p>Current Version:</p><br/>
-To be uploaded.	
+	<p><a href='https://www.dropbox.com/s/dafk1keq3ssordo/Gizmo64.plugin-20.07.19.0120.zip?dl=1'>Gizmo64.plugin-20.07.19.0120.zip</a> Mac+Windows 64bit</p><br/>
 	
 <p>Legacy Versions:</p><br/>
 <p><a href='downloads/Gizmo64.plugin-14.01.16.0253.zip'>Gizmo64.plugin-14.01.16.0253.zip</a> (5.8mb) Mac+Windows 64bit</p><br/>
