Updated index.html to point people to X-A product updates.

--- a/index.html
+++ b/index.html
@@ -189,13 +189,11 @@
 
 
 <p>Current Version:</p><br/>
-	<p><a href='https://www.dropbox.com/s/wmvc1kyfslyim6b/Gizmo64.plugin-20.07.19.0120.zip?dl=1'>Gizmo64.plugin-20.07.19.0120.zip</a> Mac+Windows 64bit</p><br/>
-	<br/>
+	<p>Check your X-Aviation products for updates. X-Aviation installers will automatically install the current version of Gizmo for you.</p><br/>
 	<!--
-<p>Legacy Versions:</p><br/>
-<p><a href='downloads/Gizmo64.plugin-14.01.16.0253.zip'>Gizmo64.plugin-14.01.16.0253.zip</a> (5.8mb) Mac+Windows 64bit</p><br/>
-<br>
+	<p><a href='https://www.dropbox.com/s/wmvc1kyfslyim6b/Gizmo64.plugin-20.07.19.0120.zip?dl=1'>Gizmo64.plugin-20.07.19.0120.zip</a> Mac+Windows 64bit</p><br/>
 -->
+	<br/>
 <p>Linux support is not available at this time.</p><br>
 <br>
 
