--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 <p>Hello World:</p>
 
 <p>
-    ACF/scripts/init.lua<br>
+    ACF/scripts_src/init.lua<br>
 <pre><code data-language='lua'>function OnDraw_Windows()
     gfx.setColor(color.red)
     gfx.drawString( "Hello World!", 512, 384 )
